{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 307,
  "lineage": "dafbd98f-ecb6-cf0b-c331-e0332cf40989",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-046842448f9e74e7d",
            "arn": "arn:aws:ec2:us-east-1:490203163027:instance/i-06a647c598f9dd107",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06a647c598f9dd107",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykeypair",
            "monitoring": false,
            "primary_network_interface_id": "eni-00cd6896a08643625",
            "private_dns": "ip-172-16-0-27.ec2.internal",
            "private_ip": "172.16.0.27",
            "public_dns": "ec2-18-234-255-186.compute-1.amazonaws.com",
            "public_ip": "18.234.255.186",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0334a876c1ec06068",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0737279c742e0c476",
            "tags": {
              "Name": "App-Server-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f28eb2549b86a26e"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykeypair",
            "aws_security_group.allow-app-ssh",
            "aws_subnet.app-public-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-046842448f9e74e7d",
            "arn": "arn:aws:ec2:us-east-1:490203163027:instance/i-00cb673a58cc8a02b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00cb673a58cc8a02b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykeypair",
            "monitoring": false,
            "primary_network_interface_id": "eni-0983f50a1ec8cfed4",
            "private_dns": "ip-192-168-0-36.ec2.internal",
            "private_ip": "192.168.0.36",
            "public_dns": "ec2-18-209-214-99.compute-1.amazonaws.com",
            "public_ip": "18.209.214.99",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01e79a11e5d5ffd3c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-017a773324ca16a4b",
            "tags": {
              "Name": "Database-Server-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fe367eb027ed6252"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykeypair",
            "aws_security_group.allow-db-ssh",
            "aws_subnet.db-public-1",
            "aws_vpc.db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-046842448f9e74e7d",
            "arn": "arn:aws:ec2:us-east-1:490203163027:instance/i-06c6fce54bdc03c52",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06c6fce54bdc03c52",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykeypair",
            "monitoring": false,
            "primary_network_interface_id": "eni-08a9bd0dd9e332d32",
            "private_dns": "ip-10-0-0-247.ec2.internal",
            "private_ip": "10.0.0.247",
            "public_dns": "ec2-34-200-241-55.compute-1.amazonaws.com",
            "public_ip": "34.200.241.55",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f2d4e356223d2d01",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00b1cd4b72dfd56c4",
            "tags": {
              "Name": "Web-Server-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-091df5e3107ae9bbe"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykeypair",
            "aws_security_group.allow-ssh",
            "aws_subnet.web-public-1",
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0bcdc5b8034f04f59",
            "owner_id": "490203163027",
            "tags": {
              "Name": "app"
            },
            "vpc_id": "vpc-0d3a2a0f847e1264b"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "db-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0f35a2223545ac082",
            "owner_id": "490203163027",
            "tags": {
              "Name": "db-db"
            },
            "vpc_id": "vpc-07f80a3dc4a842170"
          },
          "dependencies": [
            "aws_vpc.db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "web-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-016eff0df5a88f144",
            "owner_id": "490203163027",
            "tags": {
              "Name": "web"
            },
            "vpc_id": "vpc-0f0d6c122283e6e17"
          },
          "dependencies": [
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05e7cf846f556665c",
            "owner_id": "490203163027",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bcdc5b8034f04f59",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "app-public-1"
            },
            "vpc_id": "vpc-0d3a2a0f847e1264b"
          },
          "dependencies": [
            "aws_internet_gateway.app-gw",
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0067a355c47059707",
            "owner_id": "490203163027",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f35a2223545ac082",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "db-public-db"
            },
            "vpc_id": "vpc-07f80a3dc4a842170"
          },
          "dependencies": [
            "aws_internet_gateway.db-gw",
            "aws_vpc.db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-032a65ff0a37d8c7f",
            "owner_id": "490203163027",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-016eff0df5a88f144",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "web-public"
            },
            "vpc_id": "vpc-0f0d6c122283e6e17"
          },
          "dependencies": [
            "aws_internet_gateway.web-gw",
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app-public-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b21d5c4c5477c45",
            "route_table_id": "rtb-05e7cf846f556665c",
            "subnet_id": "subnet-0737279c742e0c476"
          },
          "dependencies": [
            "aws_internet_gateway.app-gw",
            "aws_route_table.app-public",
            "aws_subnet.app-public-1",
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00076b4cc5bbd1ae2",
            "route_table_id": "rtb-0067a355c47059707",
            "subnet_id": "subnet-017a773324ca16a4b"
          },
          "dependencies": [
            "aws_internet_gateway.db-gw",
            "aws_route_table.db-public",
            "aws_subnet.db-public-1",
            "aws_vpc.db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-public-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083ca7ed3ae255ea5",
            "route_table_id": "rtb-032a65ff0a37d8c7f",
            "subnet_id": "subnet-00b1cd4b72dfd56c4"
          },
          "dependencies": [
            "aws_internet_gateway.web-gw",
            "aws_route_table.web-public",
            "aws_subnet.web-public-1",
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-app-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:490203163027:security-group/sg-0f28eb2549b86a26e",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f28eb2549b86a26e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "117.193.164.2/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "117.193.164.2/32"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow-app-ssh",
            "name_prefix": null,
            "owner_id": "490203163027",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-app-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d3a2a0f847e1264b"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-db-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:490203163027:security-group/sg-0fe367eb027ed6252",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fe367eb027ed6252",
            "ingress": [
              {
                "cidr_blocks": [
                  "117.193.164.2/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "117.193.164.2/32"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "allow-db-ssh",
            "name_prefix": null,
            "owner_id": "490203163027",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-db-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f80a3dc4a842170"
          },
          "dependencies": [
            "aws_vpc.db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:490203163027:security-group/sg-091df5e3107ae9bbe",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-091df5e3107ae9bbe",
            "ingress": [
              {
                "cidr_blocks": [
                  "117.193.164.2/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "117.193.164.2/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-ssh",
            "name_prefix": null,
            "owner_id": "490203163027",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh-ssl"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0d6c122283e6e17"
          },
          "dependencies": [
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:490203163027:subnet/subnet-0737279c742e0c476",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.0.0/24",
            "id": "subnet-0737279c742e0c476",
            "map_public_ip_on_launch": true,
            "owner_id": "490203163027",
            "tags": {
              "Name": "app-public"
            },
            "vpc_id": "vpc-0d3a2a0f847e1264b"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:490203163027:subnet/subnet-017a773324ca16a4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-017a773324ca16a4b",
            "map_public_ip_on_launch": true,
            "owner_id": "490203163027",
            "tags": {
              "Name": "db-public"
            },
            "vpc_id": "vpc-07f80a3dc4a842170"
          },
          "dependencies": [
            "aws_vpc.db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:490203163027:subnet/subnet-00b1cd4b72dfd56c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-00b1cd4b72dfd56c4",
            "map_public_ip_on_launch": true,
            "owner_id": "490203163027",
            "tags": {
              "Name": "web-public"
            },
            "vpc_id": "vpc-0f0d6c122283e6e17"
          },
          "dependencies": [
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:490203163027:vpc/vpc-0d3a2a0f847e1264b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-07ac7fee9f9026f7b",
            "default_route_table_id": "rtb-0928a5077d432339a",
            "default_security_group_id": "sg-0c015d66473095ec6",
            "dhcp_options_id": "dopt-198fc062",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d3a2a0f847e1264b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0928a5077d432339a",
            "owner_id": "490203163027",
            "tags": {
              "Name": "app"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:490203163027:vpc/vpc-07f80a3dc4a842170",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0c1f874422ffca63a",
            "default_route_table_id": "rtb-06032f3fab70d2dd1",
            "default_security_group_id": "sg-07c5dea167714a6ae",
            "dhcp_options_id": "dopt-198fc062",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07f80a3dc4a842170",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06032f3fab70d2dd1",
            "owner_id": "490203163027",
            "tags": {
              "Name": "db"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:490203163027:vpc/vpc-0f0d6c122283e6e17",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05fb6c2ac3250d487",
            "default_route_table_id": "rtb-06e6f6a3713ebc3b1",
            "default_security_group_id": "sg-0a7a71907d372f43d",
            "dhcp_options_id": "dopt-198fc062",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f0d6c122283e6e17",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06e6f6a3713ebc3b1",
            "owner_id": "490203163027",
            "tags": {
              "Name": "web"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "web-app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": true,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-09ea838e813f11465",
            "peer_owner_id": "490203163027",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0f0d6c122283e6e17",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": true,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "web-to-app"
            },
            "vpc_id": "vpc-0d3a2a0f847e1264b"
          },
          "dependencies": [
            "aws_vpc.app",
            "aws_vpc.web"
          ]
        }
      ]
    }
  ]
}